# rlimit

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  cross-test.yml
codegen/: Cargo.toml
codegen/src/: bindings.rs  build.rs  main.rs  resource.md  resource.rs
examples/: asm_test.rs  nofile.rs  pure_rust.rs  sys_limits.rs
scripts/: __init__.py  build.rs  codegen.cpp  codegen.py  codegen.rs  codegen.sh  download-libc.sh  libc_source.py  replace.py  search_resource.py  search_rlim.py
src/: bindings.rs  errors.rs  lib.rs  linux_asm.rs  proc_limits.rs  resource.rs  resource_type.rs  rlim_type.rs  sys_limits.rs  syscall.rs  test.rs  tools.rs  unix.rs  utils.rs  windows.rs
src/resource/: generated.rs  mod.rs
src/unix/: __resources.rs  __rlims.rs  proc_limits.rs  resource.rs  resource_type.rs  rlim_type.rs  unix_asm.rs
tests/: tests.rs  unix.rs
tests/it/: linux.rs  main.rs  unix.rs  utils.rs  windows.rs
