[package]
name = "rlimit"
version = "0.10.2"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2021"
description = "Resource limits"
repository = "https://github.com/Nugine/rlimit/"
license = "MIT"
readme = "README.md"
keywords = ["rlimit", "unix", "syscall"]
categories = ["os::unix-apis"]
documentation = "https://docs.rs/rlimit"
rust-version = "1.60.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2.147"

[dev-dependencies]
once_cell = "1.18.0"

[workspace]
members = ["codegen"]
