[package]
name = "rlimit"
version = "0.10.2"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2021"
description = "Resource limits"
repository = "https://github.com/Nugine/rlimit/"
license = "MIT"
readme = "README.md"
keywords = ["rlimit", "unix", "syscall"]
categories = ["os::unix-apis"]
documentation = "https://docs.rs/rlimit"
rust-version = "1.65.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
linux_raw = ["rustix"]

[dependencies]
libc = "0.2.177"
rustix = { version = "0.38", optional = true, default-features = false, features = ["process", "std"] }

[dev-dependencies]
once_cell = "1.21.3"

[workspace]
members = ["codegen"]
